--- a/Programador_Com_Python_curso/módulo_01/exer_inicial.ipynb
+++ b/Programador_Com_Python_curso/módulo_01/exer_inicial.ipynb
@@ -16,7 +16,7 @@
     }
    ],
    "source": [
-    "print('Olá, Mundo!')\n",
+    "print('Hello, World')\n",
     "print('Aqui vou fazer uso de alguns operadores: ')"
    ]
   },
